# pooptracer

./: .clang-format  .gitignore  CMakeLists.txt  Main.cpp  README.md  build.sh
include/pooptracer/: Color.hpp  Framebuffer.hpp  Options.hpp  Ray.hpp  RayThread.hpp
include/pooptracer/scene/: Plane.hpp  SceneEntity.hpp  Sphere.hpp  Triangle.hpp
include/raytracer/: Color.hpp  Framebuffer.hpp  Options.hpp  RayThread.hpp
include/raytracer/scene/: Plane.hpp  SceneEntity.hpp  Triangle.hpp
scripts/: README.md  build.sh  clean.sh  common.sh  configure.sh  run.sh
src/: Main.cpp
